search functionality fixed

--- a/templates/home.html
+++ b/templates/home.html
@@ -51,6 +51,26 @@
 
     <!-- Search Bar (Center) -->
     <form method="POST" style="display: flex; align-items: center; gap: 10px;">
+    <input type="text" name="search" placeholder="Search books..." style="
+            padding: 8px 14px;
+            font-size: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 250px;
+        ">
+        <button type="submit" style="
+            padding: 8px 16px;
+            background-color: #63b255;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;">
+            Search
+        </button>
+    </form>
+
+    <!--
+    <form method="POST" style="display: flex; align-items: center; gap: 10px;">
         <input type="text" name="search" placeholder="Search books..." style="
             padding: 8px 14px;
             font-size: 15px;
@@ -69,6 +89,7 @@
         </button>
     </form>
 
+-->
     <!-- Right Buttons -->
     <div style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap;">
         <a href="/recommendations"  style="text-decoration: none;">
