colour palette updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #be6674;
-            --secondary-color: #bc5466;
+            --primary-color: #1A4D2E;
+            --secondary-color: #597445;
             --accent-color: #4fc3f7;
             --text-color: #272525;
-            --light-bg: #f7f2f0;
+            --light-bg: #F5EFE6;
             --white: #f3e0d1;
             --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
