--- a/templates/base2.html
+++ b/templates/base2.html
@@ -9,9 +9,9 @@
         :root {
             --primary: #ffffff;
             --highlight: #facc15;
-            --bg: #f7f2f0;
+            --bg: #ffffff;
             --text: #111827;
-            --white: #be6674;
+            --white: #8A2D3B;
         }
 
         * {
