--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
     <!-- Left Buttons -->
     <div style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap;">
         <a href="/profile" style="text-decoration: none;">
-            <button style="padding: 8px 16px; background-color: #b44759; color: rgb(255, 255, 255);
+            <button style="padding: 8px 16px; background-color: #daa520; color: rgb(255, 255, 255);
                 border: none; border-radius: 4px; cursor: pointer; display: flex; align-items: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                      fill="currentColor" viewBox="0 0 16 16" style="margin-right: 8px;">
@@ -28,21 +28,21 @@
         </a>
 
         <a href="{{ url_for('catalogue') }}" style="text-decoration: none;">
-            <button style="padding: 8px 16px; background-color: #e8b19d; color: #ffffff;
+            <button style="padding: 8px 16px; background-color: #780C28; color: #ffffff;
                 border: 1px solid #ffffff; border-radius: 4px; cursor: pointer;">
                 Catalogue
             </button>
         </a>
 
         <a href="{{ url_for('reading_lists') }}" style="text-decoration: none;">
-            <button style="padding: 8px 16px; background-color: #be6674; color: #ffffff;
+            <button style="padding: 8px 16px; background-color: #daa520; color: #ffffff;
                 border: 1px solid #ffffff; border-radius: 4px; cursor: pointer;">
                 Reading List
             </button>
         </a>
 
         <a href="{{ url_for('notifications') }}" style="text-decoration: none;">
-            <button style="padding: 8px 16px; background-color: #be6674; color: #ffffff;
+            <button style="padding: 8px 16px; background-color: #780C28; color: #ffffff;
                 border: 1px solid #ffffff; border-radius: 4px; cursor: pointer;">
                 Notifications
             </button>
@@ -99,7 +99,7 @@
             </button>
         </a>
         <a href="{{ url_for('profile_editing') }}" style="text-decoration: none;">
-            <button style="padding: 8px 16px; background-color: #669ae8; color: #ffffff;
+            <button style="padding: 8px 16px; background-color: #ca7373; color: #ffffff;
                 border: 1px solid #cbd8ec; border-radius: 4px; cursor: pointer;">
                 Edit Profile
             </button>
