--- a/templates/base2.html
+++ b/templates/base2.html
@@ -9,9 +9,9 @@
         :root {
             --primary: #ffffff;
             --highlight: #facc15;
-            --bg: #ffffff;
+            --bg: #F5EFE6;
             --text: #111827;
-            --white: #8A2D3B;
+            --white: #1A4D2E;
         }
 
         * {
