--- a/templates/chat.html
+++ b/templates/chat.html
@@ -77,7 +77,7 @@
     }
 
     .btn:hover {
-        background-color: #357ab8;
+        background-color: #669ae8;
     }
 
     @media (max-width: 768px) {
