--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -4,7 +4,7 @@
     .recommendations-header {
         text-align: center;
         margin: 40px auto 20px;
-        color: #be2741;
+        color: #1A4D2E;
         font-size: 26px;
         font-weight: bold;
     }
