--- a/templates/profile_editing.html
+++ b/templates/profile_editing.html
@@ -28,7 +28,7 @@
         left: 0;
         right: 0;
         height: 6px;
-        background: linear-gradient(90deg, #be6674, #be6674);
+        background: linear-gradient(90deg, #1A4D2E, #1A4D2E);
     }
 
     .edit-form-container h3 {
@@ -79,7 +79,7 @@
     button[type="submit"] {
         width: 100%;
         padding: 14px;
-        background: linear-gradient(90deg, #be6674, #be6674);
+        background: linear-gradient(90deg, #1A4D2E, #1A4D2E);
         color: white;
         font-weight: 600;
         border: none;
