--- a/templates/search_users.html
+++ b/templates/search_users.html
@@ -6,9 +6,9 @@
 
     <form method="POST" style="display: flex; gap: 10px; justify-content: center; margin-bottom: 30px;">
         <input type="text" name="search_term" placeholder="Search by username or email" style="flex: 1; max-width: 400px; padding: 10px 14px; border: 1px solid #ccc; border-radius: 4px;">
-        <button type="submit" style="padding: 10px 18px; background-color: #27d44c; color: white; border: none; border-radius: 4px; cursor: pointer;">Search</button>
+        <button type="submit" style="padding: 10px 18px; background-color: #1ca93a; color: white; border: none; border-radius: 4px; cursor: pointer;">Search</button>
         <a href="{{ url_for('chat') }}"
-        style="padding: 10px 20px; background-color: #dfd21e; color: white;
+        style="padding: 10px 20px; background-color: #daa520; color: white;
             border-radius: 5px; text-decoration: none; font-weight: bold; cursor: pointer;">
         Chat
     </a>
@@ -22,15 +22,15 @@
                         <p><strong>{{ user.username }}</strong></p>
                         <p style="color: #555;">{{ user.email }}</p>
                         <form action="/profile/{{ user.username }}" method="get" style="margin: 5px 0;">
-                            <button type="submit" style="background-color: #007BFF; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">View Profile</button>
+                            <button type="submit" style="background-color: #669ae8; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">View Profile</button>
                         </form>
                         {% if user.username in followed_set %}
                             <form action="/unfollow/{{ user.username }}" method="post" style="margin: 5px 0;">
-                                <button type="submit" style="background-color: #b33131; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">Unfollow</button>
+                                <button type="submit" style="background-color: #780C28; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">Unfollow</button>
                             </form>
                         {% else %}
                             <form action="/follow/{{ user.username }}" method="post" style="margin: 5px 0;">
-                                <button type="submit" style="background-color: #2ecc71; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">Follow</button>
+                                <button type="submit" style="background-color: #12b456; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer;">Follow</button>
                             </form>
                         {% endif %}
                     </div>
